@@ -188,7 +188,7 @@ m2_range (struct type *type, struct ui_file *stream, int show,
 	  int level, const struct type_print_options *flags)
 {
   if (TYPE_HIGH_BOUND (type) == TYPE_LOW_BOUND (type))
-    m2_print_type (TYPE_DOMAIN_TYPE (type), "", stream, show, level,
+    m2_print_type (TYPE_SELF_TYPE (type), "", stream, show, level,
 		   flags);
   else
     {
