@@ -1,5 +1,10 @@
 2015-01-31  Doug Evans  <xdje42@gmail.com>
 
+	* gdbtypes.h (TYPE_SELF_TYPE): Renamed from TYPE_DOMAIN_TYPE.
+	All uses updated.
+
+2015-01-31  Doug Evans  <xdje42@gmail.com>
+
 	* gnu-v3-abi.c (gnuv3_dynamic_class): Assert only passed structs
 	or unions.  Return zero if union.
 	(gnuv3_get_vtable): Call check_typedef.  Assert only passed structs.
